k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brain-task-service
spec:
  type: ClusterIP
  selector:
    app: brain-task-app
  ports:
    - port: 80
      targetPort: 80
